fix: display on mobile

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,7 +24,7 @@ p {
 main {
   text-align: center;
   width: 95%;
-  max-width: 400px;
+  max-width: 100%;
   margin: auto;
 }
 
@@ -38,6 +38,7 @@ main {
   border: 3px solid rgb(255, 145, 0);
   touch-action: none;
 }
+
 
 .hidden {
   display: none;
